修改规程寻优模型中弃水逻辑，新增删、改方案名称的代码